updated vaccination abstract with first week details

--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1251,7 +1251,10 @@ cards:
 
     fullWidth: true
     abstract: >
-      Number of people who have received a vaccination for COVID-19, by week in which the vaccine was administered.
+      Number of people who have received a vaccination for COVID-19, by week in which the vaccine was administered. Data was
+      provided by NHS England for the combined period 8-20 December, which is published here as the value for the week ending 
+      20 December, and included in the UK values for that week. For this reason, no England or UK values are presented for 
+      week ending 13 December. 
       
     download:
       - newPeopleReceivingFirstDose
