--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1265,60 +1265,15 @@ cards:
       provided by NHS England for the combined period 8-20 December, which is published here as the England value for the week 
       ending 20 December, and included in the UK values for that week. For this reason, no England or UK values are presented for 
       week ending 13 December. 
-      
-    download:
-      - newPeopleReceivingFirstDose
-      - cumPeopleReceivingFirstDose
-      
-    tabs:
-      - heading: Data
-        tabType: table
-        fields:
-          - label: 7-day period ending
-            value: date
-            type: date
-            tooltip: Date the vaccination was given
-
-          - label: Number received first dose in the week
-            value: newPeopleReceivingFirstDose
-            type: numeric
-            tooltip: Weekly number of new people receiving first dose of vaccine
-
-          - label: Total received first dose
-            value: cumPeopleReceivingFirstDose
-            type: numeric
-            tooltip: Cumulative number of people receiving first dose of vaccine
- 
-      - heading: About 
-        tabType: metadata
-        filename: cardMetadata/healthcare/cardVaccinations.md
-
-# {{ EndDevOnlyBlock }}
-
-##############################################################################################################################
-
-# {{ StartDevOnlyBlock }}
-
-  - heading: People who have received vaccinations
-    cardType: chart
-    locationAware:
-      included: 
-        areaType:
-          - overview
-          - nation
-
-    fullWidth: false
-    abstract: >
-      Number of people who have received a vaccination for COVID-19, by week in which the vaccine was administered. Data was
-      provided by NHS England for the combined period 8-20 December, which is published here as the England value for the week 
-      ending 20 December, and included in the UK values for that week. For this reason, no England or UK values are presented for 
-      week ending 13 December. 
     
     download:
       - newPeopleReceivingFirstDose
       - cumPeopleReceivingFirstDose
 
     tabs: 
+
+  # {{ StartDevOnlyBlock }}
+
       - heading: Weekly
         tabType: chart
         barType: normal
@@ -1339,6 +1294,8 @@ cards:
             type: bar
             colour: 0
             rollingAverage: false
+
+  # {{ EndDevOnlyBlock }}
             
       - heading: Data
         tabType: table
@@ -1363,3 +1320,88 @@ cards:
         filename: cardMetadata/healthcare/cardVaccinations.md
 
 # {{ EndDevOnlyBlock }}
+
+##############################################################################################################################
+
+# {{ StartDevOnlyBlock }}
+
+  - heading: People who have received vaccinations
+    cardType: chart
+    locationAware:
+      included: 
+        areaType:
+          - overview
+          - nation
+
+    fullWidth: false
+    abstract: >
+      Number of people who have received a vaccination for COVID-19, by week in which the vaccine was administered. Data was
+      provided by NHS England for the combined period 8-20 December, which is published here as the England value for the week 
+      ending 20 December, and included in the UK values for that week. For this reason, no England or UK values are presented for 
+      week ending 13 December. 
+
+    download:
+      - newPeopleReceivingFirstDose
+      - cumPeopleReceivingFirstDose
+
+    tabs:
+        - heading: Weekly
+          tabType: chart
+          barType: stack
+          colours: [0, 9, 3, 10] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+
+          fields:
+            - label: Weekly number of people received first dose
+              value: newPeopleReceivingFirstDose
+              tooltip: Weekly number of people who received the first dose of COVID-19 vaccine in each nation
+              type: bar
+              rollingAverage: false
+
+        - heading: Cumulative
+          tabType: chart
+          barType: stack
+          colours: [0, 9, 3, 10] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+
+          fields:
+            - label: Cumulative number of people received first dose
+              value: cumPeopleReceivingFirstDose
+              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine in each nation
+              type: bar
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+        
+          fields:
+          - label: Week ending date
+            value: date
+            type: date
+            tooltip: Week ending date
+
+          - label: Weekly number of people received first dose
+            value: newPeopleReceivingFirstDose
+            type: numeric
+            tooltip: Weekly number of people who received the first dose of COVID-19 vaccine 
+
+          - label: Cumulative number of people received first dose
+            value: cumPeopleReceivingFirstDose
+            type: numeric
+            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/healthcare/cardVaccinations.md    
+
+   # {{ EndDevOnlyBlock }}
