--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -1,5 +1,4 @@
-banner:
-  appearByUpdate: "2020-12-23"
+- appearByUpdate: "2020-12-23"
   disappearByUpdate: "2020-01-05"
   body: >
     During the holiday period, the COVID-19 Dashboard will be updated every day, but the 
