changes the wording for the banner

--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -3,4 +3,5 @@
   body: >
     During the holiday period, the COVID-19 Dashboard will be updated every day, but the 
     amount of data being updated will vary. 
-    [Full details](/details/about-data#holiday-season-2020-schedule) are outlined below.
+    See [full details](/details/about-data#holiday-season-2020-schedule) in the 
+    **About the Data** page.
