--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -2,6 +2,5 @@
   disappearByUpdate: "2021-01-05"
   body: >
     During the holiday period, the COVID-19 Dashboard will be updated every day, but the 
-    amount of data being updated will vary. 
-    See [full details](/details/about-data#holiday-season-2020-schedule) in the 
-    **About the Data** page.
+    amount of data being updated will vary. See full details in 
+    the [About the Data](/details/about-data#holiday-season-2020-schedule) page.
