--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -3,7 +3,7 @@
   body: >
     During the holiday period, the COVID-19 Dashboard will be updated every day, but the 
     amount of data being updated will vary. See full details in 
-    the [About the Data](/details/about-data#holiday-season-2020-schedule) page.
+    the [About the Data](/details/about-data#new-year-2021-schedule) page.
 
 # {{ StartDevOnlyBlock }}
 
