--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -44,6 +44,14 @@ headlineNumbers:
         value: cumPeopleReceivingFirstDose
         tooltip: Total number of people who have received the first dose of COVID-19 vaccine, up to {date}
 
+# {{ StartDevOnlyBlock }}
+
+      - label: Second dose total
+        value: cumPeopleReceivingSecondDose
+        tooltip: Total number of people who have received the second dose of COVID-19 vaccine, up to {date}
+
+# {{ EndDevOnlyBlock }}
+
     
 ##############################################################################################################################
 
@@ -1254,7 +1262,7 @@ cards:
           - overview
           - nation
 
-    fullWidth: false
+    fullWidth: true
     abstract: >
       Number of people who have received a vaccination for COVID-19, by week in which the vaccine was administered. Data was
       provided by NHS England for the combined period 8-20 December, which is published here as the England value for the week 
@@ -1265,55 +1273,144 @@ cards:
       - newPeopleReceivingFirstDose
       - cumPeopleReceivingFirstDose
 
-    tabs: 
+  # {{ StartDevOnlyBlock }}  
+      - newPeopleReceivingSecondDose
+      - cumPeopleReceivingSecondDose
+  # {{ EndDevOnlyBlock }}
+
+    options:
+      type: radio
+      heading: null
+      choices:
+        - First dose
+  # {{ StartDevOnlyBlock }}         
+        - Second dose
+  # {{ EndDevOnlyBlock }}
+
+    First dose:
+    
+      tabs: 
 
   # {{ StartDevOnlyBlock }}
 
-      - heading: Weekly
-        tabType: chart
-        barType: normal
-        fields:
-          - label: Number of people received first dose
-            value: newPeopleReceivingFirstDose
-            tooltip: Weekly number of people who received the first dose of COVID-19 vaccine
-            type: bar
-            colour: 0
-            rollingAverage: false
+        - heading: Weekly
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Number of people received first dose
+              value: newPeopleReceivingFirstDose
+              tooltip: Weekly number of people who received the first dose of COVID-19 vaccine
+              type: bar
+              colour: 0
+              rollingAverage: false
             
-      - heading: Cumulative
-        tabType: chart
-        fields:
-          - label: Number of people received first dose
-            value: cumPeopleReceivingFirstDose
-            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
-            type: bar
-            colour: 0
-            rollingAverage: false
+        - heading: Cumulative
+          tabType: chart
+          fields:
+            - label: Number of people received first dose
+              value: cumPeopleReceivingFirstDose
+              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+              type: bar
+              colour: 0
+              rollingAverage: false
 
   # {{ EndDevOnlyBlock }}
             
-      - heading: Data
-        tabType: table
-        fields:
-          - label: Week ending date
-            value: date
-            type: date
-            tooltip: Week ending date
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Week ending date
+              value: date
+              type: date
+              tooltip: Week ending date
 
-          - label: "Weekly: 1st dose"
-            value: newPeopleReceivingFirstDose
-            type: numeric
-            tooltip: Weekly number of people who received the first dose of COVID-19 vaccine 
+            - label: "Weekly: 1st dose"
+              value: newPeopleReceivingFirstDose
+              type: numeric
+              tooltip: Weekly number of people who received the first dose of COVID-19 vaccine 
 
-          - label: "Cumulative: 1st dose"
-            value: cumPeopleReceivingFirstDose
-            type: numeric
-            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+            - label: "Cumulative: 1st dose"
+              value: cumPeopleReceivingFirstDose
+              type: numeric
+              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
 
-      - heading: About 
-        tabType: metadata
-        filename: cardMetadata/healthcare/cardVaccinations.md
+  # {{ StartDevOnlyBlock }}
 
+            - label: "Weekly: 2nd dose"
+              value: newPeopleReceivingSecondDose
+              type: numeric
+              tooltip: Weekly number of people who received the second dose of COVID-19 vaccine 
+
+            - label: "Cumulative: 2nd dose"
+              value: cumPeopleReceivingSecondDose
+              type: numeric
+              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
+
+   # {{ EndDevOnlyBlock }}        
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/healthcare/cardVaccinations.md
+
+  # {{ StartDevOnlyBlock }}
+
+    Second dose:
+    
+      tabs: 
+        - heading: Weekly
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Number of people received second dose
+              value: newPeopleReceivingSecondDose
+              tooltip: Weekly number of people who received the second dose of COVID-19 vaccine
+              type: bar
+              colour: 0
+              rollingAverage: false
+            
+        - heading: Cumulative
+          tabType: chart
+          fields:
+            - label: Number of people received second dose
+              value: cumPeopleReceivingSecondDose
+              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
+              type: bar
+              colour: 0
+              rollingAverage: false
+            
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Week ending date
+              value: date
+              type: date
+              tooltip: Week ending date
+
+            - label: "Weekly: 1st dose"
+              value: newPeopleReceivingFirstDose
+              type: numeric
+              tooltip: Weekly number of people who received the first dose of COVID-19 vaccine 
+
+            - label: "Cumulative: 1st dose"
+              value: cumPeopleReceivingFirstDose
+              type: numeric
+              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+
+            - label: "Weekly: 2nd dose"
+              value: newPeopleReceivingSecondDose
+              type: numeric
+              tooltip: Weekly number of people who received the second dose of COVID-19 vaccine 
+
+            - label: "Cumulative: 2nd dose"
+              value: cumPeopleReceivingSecondDose
+              type: numeric
+              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/healthcare/cardVaccinations.md
+
+  # {{ EndDevOnlyBlock }}
 
 ##############################################################################################################################
 
@@ -1325,7 +1422,7 @@ cards:
           - overview
           - nation
 
-    fullWidth: false
+    fullWidth: true
     abstract: >
       Number of people who have received a vaccination for COVID-19, by week in which the vaccine was administered. Data was
       provided by NHS England for the combined period 8-20 December, which is published here as the England value for the week 
@@ -1335,64 +1432,144 @@ cards:
     download:
       - newPeopleReceivingFirstDose
       - cumPeopleReceivingFirstDose
+  # {{ StartDevOnlyBlock }}  
+      - newPeopleReceivingSecondDose
+      - cumPeopleReceivingSecondDose
+  # {{ EndDevOnlyBlock }}
 
-    tabs:
-        - heading: Weekly
-          tabType: chart
-          barType: stack
-          colours: [0, 9, 3, 10] # areaNames in alphabetical order
-          params:
-            - key: areaType
-              sign: "="
-              value: nation
+    options:
+      type: radio
+      heading: null
+      choices:
+        - First dose
+  # {{ StartDevOnlyBlock }}         
+        - Second dose
+  # {{ EndDevOnlyBlock }}
 
-          fields:
-            - label: "weekly: 1st dose"
+    First dose:
+
+      tabs:
+          - heading: Weekly
+            tabType: chart
+            barType: stack
+            colours: [0, 9, 3, 10] # areaNames in alphabetical order
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+
+            fields:
+              - label: "weekly: 1st dose"
+                value: newPeopleReceivingFirstDose
+                tooltip: Weekly number of people who received the first dose of COVID-19 vaccine in each nation
+                type: bar
+                rollingAverage: false
+
+          - heading: Cumulative
+            tabType: chart
+            barType: stack
+            colours: [0, 9, 3, 10] # areaNames in alphabetical order
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+
+            fields:
+              - label: "cumulative: 1st dose"
+                value: cumPeopleReceivingFirstDose
+                tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine in each nation
+                type: bar
+                rollingAverage: false
+
+          - heading: Data
+            tabType: table
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+        
+            fields:
+            - label: Week ending date
+              value: date
+              type: date
+              tooltip: Week ending date
+
+            - label: "weekly: 1st dose" 
               value: newPeopleReceivingFirstDose
-              tooltip: Weekly number of people who received the first dose of COVID-19 vaccine in each nation
-              type: bar
-              rollingAverage: false
+              type: numeric
+              tooltip: Weekly number of people who received the first dose of COVID-19 vaccine 
 
-        - heading: Cumulative
-          tabType: chart
-          barType: stack
-          colours: [0, 9, 3, 10] # areaNames in alphabetical order
-          params:
-            - key: areaType
-              sign: "="
-              value: nation
-
-          fields:
             - label: "cumulative: 1st dose"
               value: cumPeopleReceivingFirstDose
-              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine in each nation
-              type: bar
-              rollingAverage: false
+              type: numeric
+              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
 
-        - heading: Data
-          tabType: table
-          params:
-            - key: areaType
-              sign: "="
-              value: nation
+          - heading: About 
+            tabType: metadata
+            filename: cardMetadata/healthcare/cardVaccinations.md    
+
+  # {{ StartDevOnlyBlock }}
+
+    Second dose:
+
+      tabs:
+          - heading: Weekly
+            tabType: chart
+            barType: stack
+            colours: [0, 9, 3, 10] # areaNames in alphabetical order
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+
+            fields:
+              - label: "weekly: 2nd dose"
+                value: newPeopleReceivingSecondDose
+                tooltip: Weekly number of people who received the second dose of COVID-19 vaccine in each nation
+                type: bar
+                rollingAverage: false
+
+          - heading: Cumulative
+            tabType: chart
+            barType: stack
+            colours: [0, 9, 3, 10] # areaNames in alphabetical order
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+
+            fields:
+              - label: "cumulative: 2nd dose"
+                value: cumPeopleReceivingSecondDose
+                tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine in each nation
+                type: bar
+                rollingAverage: false
+
+          - heading: Data
+            tabType: table
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
         
-          fields:
-          - label: Week ending date
-            value: date
-            type: date
-            tooltip: Week ending date
+            fields:
+            - label: Week ending date
+              value: date
+              type: date
+              tooltip: Week ending date
 
-          - label: "weekly: 1st dose" 
-            value: newPeopleReceivingFirstDose
-            type: numeric
-            tooltip: Weekly number of people who received the first dose of COVID-19 vaccine 
+            - label: "weekly: 2nd dose" 
+              value: newPeopleReceivingSecondDose
+              type: numeric
+              tooltip: Weekly number of people who received the second dose of COVID-19 vaccine 
 
-          - label: "cumulative: 1st dose"
-            value: cumPeopleReceivingFirstDose
-            type: numeric
-            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+            - label: "cumulative: 2nd dose"
+              value: cumPeopleReceivingSecondDose
+              type: numeric
+              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
 
-        - heading: About 
-          tabType: metadata
-          filename: cardMetadata/healthcare/cardVaccinations.md    
+          - heading: About 
+            tabType: metadata
+            filename: cardMetadata/healthcare/cardVaccinations.md    
 
+  # {{ EndDevOnlyBlock }}
