--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1251,7 +1251,7 @@ cards:
 ##############################################################################################################################
 
   - heading: People who have received vaccinations
-    cardType: chart
+    cardType: multiAreaStatic
     locationAware:
       included: 
         areaType:
@@ -1271,19 +1271,18 @@ cards:
       - newPeopleReceivingSecondDose
       - cumPeopleReceivingSecondDose
 
-
     options:
       type: radio
       heading: null
       choices:
-        - First dose
-        - Second dose
+        - UK total
+        - By nation
 
-    First dose:
+    UK total:
     
       tabs: 
 
-        - heading: Weekly
+        - heading: 1st dose weekly
           tabType: chart
           barType: normal
           fields:
@@ -1294,7 +1293,7 @@ cards:
               colour: 0
               rollingAverage: false
             
-        - heading: Cumulative
+        - heading: 1st dose cumulative
           tabType: chart
           fields:
             - label: Number of people received first dose
@@ -1303,6 +1302,31 @@ cards:
               type: bar
               colour: 0
               rollingAverage: false
+
+ # {{ StartDevOnlyBlock }} 
+
+        - heading: 2nd dose weekly
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Number of people received second dose
+              value: newPeopleReceivingSecondDose
+              tooltip: Weekly number of people who received the secind dose of COVID-19 vaccine
+              type: bar
+              colour: 0
+              rollingAverage: false
+            
+        - heading: 2nd dose cumulative
+          tabType: chart
+          fields:
+            - label: Number of people received second dose
+              value: cumPeopleReceivingSecondDose
+              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+ # {{ EndDevOnlyBlock }}         
             
         - heading: Data
           tabType: table
@@ -1337,66 +1361,126 @@ cards:
           filename: cardMetadata/healthcare/cardVaccinations.md
 
 
-    Second dose:
-    
-      tabs: 
+    By nation:
 
- # {{ StartDevOnlyBlock }}    
-        - heading: Weekly
-          tabType: chart
-          barType: normal
-          fields:
-            - label: Number of people received second dose
-              value: newPeopleReceivingSecondDose
-              tooltip: Weekly number of people who received the second dose of COVID-19 vaccine
-              type: bar
-              colour: 0
-              rollingAverage: false
-            
-        - heading: Cumulative
-          tabType: chart
-          fields:
-            - label: Number of people received second dose
-              value: cumPeopleReceivingSecondDose
-              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
-              type: bar
-              colour: 0
-              rollingAverage: false
+      tabs:
+          - heading: 1st dose weekly
+            tabType: chart
+            barType: stack
+            colours: [0, 9, 3, 10] # areaNames in alphabetical order
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
 
-  # {{ EndDevOnlyBlock }}
-            
-        - heading: Data
-          tabType: table
-          fields:
+            fields:
+              - label: "weekly: 1st dose"
+                value: newPeopleReceivingFirstDose
+                tooltip: Weekly number of people who received the first dose of COVID-19 vaccine in each nation
+                type: bar
+                rollingAverage: false
+
+          - heading: 1st dose cumulative
+            tabType: chart
+            barType: stack
+            colours: [0, 9, 3, 10] # areaNames in alphabetical order
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+
+            fields:
+              - label: "cumulative: 1st dose"
+                value: cumPeopleReceivingFirstDose
+                tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine in each nation
+                type: bar
+                rollingAverage: false
+
+ # {{ StartDevOnlyBlock }} 
+
+          - heading: 2nd dose weekly
+            tabType: chart
+            barType: stack
+            colours: [0, 9, 3, 10] # areaNames in alphabetical order
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+
+            fields:
+              - label: "weekly: 2nd dose"
+                value: newPeopleReceivingSecondDose
+                tooltip: Weekly number of people who received the second dose of COVID-19 vaccine in each nation
+                type: bar
+                rollingAverage: false
+
+          - heading: 2nd dose cumulative
+            tabType: chart
+            barType: stack
+            colours: [0, 9, 3, 10] # areaNames in alphabetical order
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+
+            fields:
+              - label: "cumulative: 2nd dose"
+                value: cumPeopleReceivingSecondDose
+                tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine in each nation
+                type: bar
+                rollingAverage: false
+
+ # {{ EndDevOnlyBlock }} 
+
+          - heading: 1st dose data
+            tabType: table
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+        
+            fields:
             - label: Week ending date
               value: date
               type: date
               tooltip: Week ending date
 
-            - label: "Weekly: 1st dose"
+            - label: "weekly: 1st dose" 
               value: newPeopleReceivingFirstDose
               type: numeric
               tooltip: Weekly number of people who received the first dose of COVID-19 vaccine 
 
-            - label: "Cumulative: 1st dose"
+            - label: "cumulative: 1st dose"
               value: cumPeopleReceivingFirstDose
               type: numeric
               tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
 
-            - label: "Weekly: 2nd dose"
+          - heading: 2nd dose data
+            tabType: table
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+        
+            fields:
+            - label: Week ending date
+              value: date
+              type: date
+              tooltip: Week ending date
+
+            - label: "weekly: 2nd dose" 
               value: newPeopleReceivingSecondDose
               type: numeric
               tooltip: Weekly number of people who received the second dose of COVID-19 vaccine 
 
-            - label: "Cumulative: 2nd dose"
+            - label: "cumulative: 2nd dose"
               value: cumPeopleReceivingSecondDose
               type: numeric
-              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
+              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine         
 
-        - heading: About 
-          tabType: metadata
-          filename: cardMetadata/healthcare/cardVaccinations.md
-
+          - heading: About 
+            tabType: metadata
+            filename: cardMetadata/healthcare/cardVaccinations.md
 
 ##############################################################################################################################
 
