--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -67,7 +67,7 @@ cards:
       
     fullWidth: true
     abstract: >
-      Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data are not
+      Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data is not
       updated every day by all four nations and the figures for Wales are not comparable to those
       for other nations as Wales include suspected COVID-19 patients while the other nations include 
       only confirmed cases.
@@ -143,7 +143,7 @@ cards:
 
     fullWidth: true
     abstract: >
-      Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data are not
+      Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data is not
       updated every day by all four nations and the figures are not comparable as Wales
       include suspected COVID-19 patients while the other nations include only confirmed
       cases.
@@ -307,7 +307,7 @@ cards:
     fullWidth: true
     abstract: >
       Rate of COVID-19 patients admitted to hospital in the rolling 7-day period ending
-      on the dates shown. Data are not
+      on the dates shown. Data is not
       updated every day by all four nations and the figures are not comparable as Wales
       include suspected COVID-19 patients while the other nations include only confirmed
       cases.
@@ -360,7 +360,7 @@ cards:
     fullWidth: false
     abstract: >
       Total numbers of COVID-19 patients admitted to hospital since the start of the pandemic, by
-      age. Data are not updated every day. Some admission records have missing age, so the sum of
+      age. Data is not updated every day. Some admission records have missing age, so the sum of
       the subgroups does not equal the total admissions for the area.
       
     download:
@@ -490,7 +490,7 @@ cards:
       
     fullWidth: true
     abstract: >
-      Daily count of confirmed COVID-19 patients in hospital at 8am. Data are not updated every day.
+      Daily count of confirmed COVID-19 patients in hospital at 8am. Data is not updated every day.
      
     download:
       - hospitalCases
@@ -551,9 +551,9 @@ cards:
     abstract: >
       Daily count of confirmed COVID-19 patients in hospital at 8am.
       Data from the four nations may not be directly comparable as data about COVID-19
-      patients in hospitals are collected differently. Data are not reported by each nation
+      patients in hospitals are collected differently. Data is not reported by each nation
       every day. The UK figure is the sum of the four nations' figures and can only be
-      calculated when all nations' data are available.
+      calculated when all nations' data is available.
 
     download:
       - hospitalCases
@@ -672,7 +672,7 @@ cards:
   #   fullWidth: true
   #   abstract: >
   #     Daily count of confirmed COVID-19 patients in hospital at midnight the preceding
-  #     night in each NHS region. Data are not updated every day.
+  #     night in each NHS region. Data is not updated every day.
 
   #   download:
   #     - hospitalCases
@@ -729,7 +729,7 @@ cards:
           - overview
       
     abstract: >
-      Daily count of COVID-19 patients in mechanical ventilation beds. Data are not updated
+      Daily count of COVID-19 patients in mechanical ventilation beds. Data is not updated
       every day.
 
     download:
@@ -841,9 +841,9 @@ cards:
     abstract: >
       COVID-19 patients in mechanical ventilation beds. Data from the four nations may not be
       directly comparable as data about COVID-19 patients in hospitals are collected differently. Data
-      are not reported by each nation every day and England data are not available before 2 April. The
+      are not reported by each nation every day and England data is not available before 2 April. The
       UK figure is the sum of the four nations' figures and can only be calculated when all nations'
-      data are available.
+      data is available.
 
     download:
       - covidOccupiedMVBeds
@@ -959,9 +959,9 @@ cards:
     abstract: >
       Mechanical ventilation bed occupany by occupant type. Data from the four nations may not be
       directly comparable as data about COVID-19 patients in hospitals are collected differently. Data
-      are not reported by each nation every day and England data are not available before 2 April. The
+      are not reported by each nation every day and England data is not available before 2 April. The
       UK figure is the sum of the four nations' figures and can only be calculated when all nations'
-      data are available.
+      data is available.
 
     download:
       - covidOccupiedMVBeds
